--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="brp.jpg" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Mina Bastola</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">RAJESH CHAUBE</h1>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Programmer</p>
+                <p class="masthead-subheading font-weight-light mb-0">Computer Student</p>
                 <nav>
                     <a href="http://youtube.com/RC GAMING"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=100074118372158"><i class="fab fa-facebook-f"></i></a>
